<resources>
    <string name="app_name">MedCarer</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_email">Email</string>
    <string name="hint_Name">Name (e.g. Sahan Ruwanga)</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="show_register">Do not have an account?</string>
    <string name="show_login">Already have an account?</string>
    <string name="navigate_register">Register here...</string>
    <string name="navigate_login">Go to Login...</string>
    <string name="save">Save</string>
    <string name="preview">Preview</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="medical_history">Medical History</string>
    <string name="new_record">New Medical Record</string>
    <string name="appointment">Appointment</string>

    <!--Add Medical Record Form-->
    <string name="disease_name">Disease</string>
    <string name="medicine_name">Medicine</string>
    <string name="allergic_status">Yes or No</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date1">Date</string>
    <string name="doctor_name">Doctor</string>
    <string name="contact_number">Contact Number</string>
    <string name="description">More Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="allergic_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>
