<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sahanruwanga.medcarer.activity.RegisterActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/fullName"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_Name"
            android:textColorHint="@color/colorHintText"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:layout_marginTop="150dp"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_design"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorHintText"
            android:layout_below="@+id/fullName"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_design"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorHintText"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_design"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/button_register"
            android:onClick="doRegister"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lable1"
            android:text="@string/show_login"
            android:layout_below="@id/registerButton"
            android:textColor="@color/colorBlack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_login"
            android:layout_below="@id/lable1"
            android:textColor="@color/colorLink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:onClick="openLoginActivity"/>
    </RelativeLayout>
</ScrollView>
